# iactrace

./: .gitignore  README.md  pyproject.toml  render.diff  setup.py
configs/: builder.py
configs/HESS/: CT1.yaml  CT3.yaml  CT5.yaml  CreateHESSConfig.ipynb
examples/: Cassegrain.ipynb  Demo.ipynb  HESS_I.ipynb  HESS_II.ipynb  New_Design.ipynb  ResponseMatrix.ipynb
iactrace/: __init__.py
iactrace/core/: __init__.py  apertures.py  geometry.py  integrators.py  intersections.py  obstructions.py  reflection.py  render.py  surfaces.py  transforms.py
iactrace/io/: __init__.py  yaml_loader.py
iactrace/samplers/: __init__.py  mirror_out.py
iactrace/sensors/: __init__.py  hexagonal.py  square.py
iactrace/telescope/: __init__.py  apertures.py  integrators.py  mirrors.py  obstructions.py  operations.py  simulation.py  surfaces.py  telescope.py
iactrace/utils/: __init__.py  filtering.py  paths.py  sampling.py  transforms.py
iactrace/viz/: __init__.py  plotting.py  telescope3d.py
licenses/: LICENSE.rst  TEMPLATE_LICENSE.rst
